Added TinyObjLoader and STB as submodules.
Both of these dependencies will eventually be needed anyway, since we'll
probably need the OBJ files to preview Yuksel's woman model, used in all
the major research papers on hair rendering I know of. STB is also added
since we'll eventually need to load in some image and create glyphs too.

--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -2,11 +2,10 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[pdftex, hidelinks,
-            pdftitle={Real-Time Hair Renderer in Vulkan},
+            pdftitle={LaTeX Paper Template},
             pdfauthor={Erik Sven Vasconcelos Jansson},
-            pdfsubject={Computer Graphics -- Rendering},
-            pdfkeywords={real-time, hair, rendering, vulkan,
-                         liu, tum, amd, frostbite}]{hyperref}
+            pdfsubject={LaTeX Paper Template},
+            pdfkeywords={template}]{hyperref}
 
 \usepackage{bm}
 \usepackage{caption}
@@ -23,6 +22,7 @@
 \usepackage{amsthm}
 \usepackage{siunitx}
 \usepackage{algorithm}
+\usepackage{newpxtext, newpxmath}
 \usepackage[capitalize, noabbrev]{cleveref}
 \usepackage[activate={true, nocompatibility}, final,
             tracking=true, kerning=true, spacing=true,
@@ -47,7 +47,7 @@ labelfont=bf,singlelinecheck=off,labelsep=space}
         aboveskip = \bigskipamount,
         escapeinside={<@}{@>}}
 
-\title{\vspace{-1.5em}\textbf{Real-Time Hair Renderer in Vulkan}}
+\title{\vspace{-1.5em}\textbf{\LaTeX\ Paper Template}}
 \author{{\textbf{Erik Sven Vasconcelos Jansson}} \\
         {\href{mailto:erija578@student.liu.se}
         {\texttt{<erija578@student.liu.se>}}} \\
