--- a/docs/vkhr.bib
+++ b/docs/vkhr.bib
@@ -140,15 +140,15 @@
     organization={ACM}
 }
 
-@inproceedings{zinke2008dual,
-    title={Dual Scattering Approximation for Fast Multiple Scattering in Hair},
-    author={Zinke, Arno and Yuksel, Cem and Weber, Andreas and Keyser, John},
-    booktitle={ACM Transactions on Graphics (TOG)},
-    volume={27},
-    number={3},
-    pages={32},
-    year={2008},
-    organization={ACM}
+@article{heitz2015sggx,
+    title={The SGGX Microflake Distribution},
+    author={Heitz, Eric and Dupuy, Jonathan and Crassin, Cyril and Dachsbacher, Carsten},
+    journal={ACM Transactions on Graphics (TOG)},
+    volume={34},
+    number={4},
+    pages={48},
+    year={2015},
+    publisher={ACM}
 }
 
 @inproceedings{yuksel2008deep,
@@ -160,15 +160,6 @@
     pages={675--680},
     year={2008},
     organization={Wiley Online Library}
-}
-
-@inproceedings{sintorn2009hair,
-    title={Hair Self Shadowing and Transparency Depth Ordering using Occupancy Maps},
-    author={Sintorn, Erik and Assarsson, Ulf},
-    booktitle={Proceedings of the 2009 Symposium on Interactive 3D Graphics and Games},
-    pages={67--74},
-    year={2009},
-    organization={ACM}
 }
 
 @inproceedings{ren2010interactive,
@@ -342,4 +333,15 @@
     journal={IEEE transactions on visualization and computer graphics},
     year={2018},
     publisher={IEEE}
+}
+
+@inproceedings{loubet2017hybrid,
+    title={Hybrid Mesh-Volume LoDs for All-Scale Pre-Filtering of Complex 3D Assets},
+    author={Loubet, Guillaume and Neyret, Fabrice},
+    booktitle={Computer Graphics Forum},
+    volume={36},
+    number={2},
+    pages={431--442},
+    year={2017},
+    organization={Wiley Online Library}
 }
