Fixed some spelling mistakes found post-EGSR 2019.

--- a/docs/vkhr.tex
+++ b/docs/vkhr.tex
@@ -309,7 +309,7 @@ Next, we want to find an isosurface $\mathbf{s}$ inside this volume to do all ou
     \vspace{-2mm}
 \end{figure}
 
-\noindent \textbf{Strand Voxelization. } Finding the strand density can be done fast with GPU compute. Each voxel stores a 8-bit counter that tells us how many strands are in it. This means we can keep track of up to 255 strands of hair per voxel. The voxelization happens by translating the hair style's vertices to volume-space (with just a coordinate-change) and increasing the counter of the voxels its mapped to. For GLSL, the \texttt{imageAtomicAdd} function can be used to increment this counter asynchronously. This is an approximation, and leads to ``gaps'' in the volume (because of line spacing), which we cover by using a filter. We have found this to work well in practice for our hair styles, but for the cases where segments are long, this approach will break down, as repairing the volume will require bigger filters.
+\noindent \textbf{Strand Voxelization. } Finding the strand density can be done fast with GPU compute. Each voxel stores a 8-bit counter that tells us how many strands are in it. This means we can keep track of up to 255 strands of hair per voxel. The voxelization happens by translating the hair style's vertices to volume-space (with just a coordinate-change) and increasing the counter of the voxels it's mapped to. For GLSL, the \texttt{imageAtomicAdd} function can be used to increment this counter asynchronously. This is an approximation, and leads to ``gaps'' in the volume (because of line spacing), which we cover by using a filter. We have found this to work well in practice for our hair styles, but for the cases where segments are long, this approach will break down, as repairing the volume will require bigger filters.
 
 % Here I describe how to quantize and store/load the tangent into a volume, since it's not possible to query the tangent (easily) if we're not using the rasterizer approach. I also describe the limitations of our approach, but say that in our tests, the result was acceptable. I do the same thing here, and describe how to efficiently implement this on the GPU, which also involves doing imageAtomicAdd. I will have a figure here showing normals v.s tangent-space shading. %
 
@@ -376,7 +376,7 @@ We have implemented our hybrid hair rendering pipeline in Vulkan, and evaluated 
 
 % Here I compare the visual fidelity of the rasterized and raymarched results by looking back at the teaser and discussing what is missing. %
 
-We start off with comparing the visual fidelity between our rendering solutions: the rasterizer and raymarcher, and see how well they transition in-between each other. In \cref{fig:teaser} are screenshots from our hybrid hair renderer, using the same rendering conditions we detailed above. The left side in each individual image shows the result of the rasterizer, while the right side shows the raymarcher's result. These results are alpha blended in the middle of the image to demonstrate a level-of-detail transition. The rasterizer produces fine details up-close, as hair strand are individually distinguishable. This is not true for the raymarcher, as it is easy to tell which of the sides are rasterized or raymarched for close-up shots. For far away to medium distances however, these details are not noticeable, and the raymarched result can be used without much loss in visual fidelity. Because these level-of-detail transitions are smooth, both of these solutions can be used, the rasterizer for close-up shots, and the raymarcher for far away shots. The reason we use a raymarcher in these cases is because it is cheaper to compute, scales better with distance, and is more runtime configurable, than our raster solution.
+We start off with comparing the visual fidelity between our rendering solutions: the rasterizer and raymarcher, and see how well they transition in-between each other. In \cref{fig:teaser} are screenshots from our hybrid hair renderer, using the same rendering conditions we detailed above. The left side in each individual image shows the result of the rasterizer, while the right side shows the raymarcher's result. These results are alpha blended in the middle of the image to demonstrate a level-of-detail transition. The rasterizer produces fine details up-close as hair strands are individually distinguishable. This is not true for the raymarcher, as it is easy to tell which of the sides are rasterized or raymarched for close-up shots. For far away to medium distances however, these details are not noticeable, and the raymarched result can be used without much loss in visual fidelity. Because these level-of-detail transitions are smooth, both of these solutions can be used, the rasterizer for close-up shots, and the raymarcher for far away shots. The reason we use a raymarcher in these cases is because it is cheaper to compute, scales better with distance, and is more runtime configurable, than our raster solution.
 
 % Thereafter, I go on to explain in a bit more about the GPU memory consumption of our algorithm, and where all of this allocated memory goes to use, and details for us to use in the limitation section later as well. %
 
